--- a/css/style.css
+++ b/css/style.css
@@ -10,21 +10,20 @@ a:link {
   color: white;
 }
 
-
 #splash {
   background: #AAFFA9;
-  background: -webkit-linear-gradient(to bottom, rgba(17, 255, 189, 1), rgba(170, 255, 169, 1));
-  background: linear-gradient(to bottom, rgba(17, 255, 189, 1), rgba(170, 255, 169, 1));
+  background: -webkit-linear-gradient(to bottom, rgba(17, 255, 189, 0.8), rgba(170, 255, 169, 0.8));
+  background: linear-gradient(to bottom, rgba(17, 255, 189, 0.8), rgba(170, 255, 169, 0.8));
   height: 100vh;
   position: relative;
   -webkit-animation-name: example;  /* Safari 4.0 - 8.0 */
-  -webkit-animation-duration: 3s;  /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 2s;  /* Safari 4.0 - 8.0 */
   -webkit-animation-fill-mode: forwards; /* Safari 4.0 - 8.0 */
   animation-name: example;
-  animation-duration: 3s;
+  animation-duration: 2s;
   animation-fill-mode: forwards;
   animation-direction: reverse;
-
+  animation-delay: 1s;
 }
 
 /* Safari 4.0 - 8.0 */
@@ -88,6 +87,13 @@ background: linear-gradient(to bottom, rgba(17, 255, 189, 0.5), rgba(170, 255, 1
   margin-top: 10vh;
 }
 
+.logo-form {
+  width: 25vh;
+}
+
+.logo-signup {
+  width: 10vh;
+}
 
 
 #write-post-section {
@@ -109,7 +115,7 @@ background: linear-gradient(to bottom, rgba(17, 255, 189, 0.5), rgba(170, 255, 1
 
 
 #show-post-section .clicked {
-  color: red;
+  color: #30AC18;
 }
 
 .box-post {
@@ -123,4 +129,78 @@ background: linear-gradient(to bottom, rgba(17, 255, 189, 0.5), rgba(170, 255, 1
 
 .icons-post {
   margin-bottom: 1vh;
+}
+
+/*--NETWORK SECTION*/
+
+#network-container {
+  background-color: white;
+  height: 100vh;
+}
+
+
+/*--HEADER--*/
+header {
+  background: -webkit-linear-gradient(to bottom, rgba(17, 255, 189, 0.5), rgba(170, 255, 169, 0.5));
+  background: linear-gradient(to bottom, rgba(17, 255, 189, 0.5), rgba(170, 255, 169, 0.5));
+  height: 10vh;
+}
+
+.logo-header {
+  width: 26vh;
+}
+
+
+/*--PROFILE SECTION--*/
+
+#profile-container {
+  background-color: white;
+  height: 100vh;
+}
+
+
+#profile-container  h5{
+  font-size: 1.2em;
+  margin: 0.3em 0;
+}
+
+#user-profile-container {
+  background: url(../assets/img/cover-girl.jpg) bottom;
+  background-size: contain;
+  height: 30vh;
+}
+
+#photo-profile {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin: 20vh 0 0 2vw;
+  width: 30%;
+}
+
+#user-profile-name {
+
+  height: 10vh;
+}
+
+#user-health {
+  height: 15vh;
+}
+
+#imc {
+  background-color: #11FFBD;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-height: 8vh;
+}
+
+
+#calories {
+  background-color: #AAFFA9;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.btn-outline {
+  border: 2px solid #AAFFA9;
+  background: none;
+  display: block;
+  margin: 0;
+  width: 100%;
 }
