--- a/views/signup.html
+++ b/views/signup.html
@@ -14,6 +14,9 @@
 <!-- Registro -->
 <main id="main-login" class="login valign-wrapper">
   <div class="row" >
+      <div class="col s12 center-align">
+        <img src="../assets/img/logo-corazon.png" alt="" class="responsive-img logo-signup">
+      </div>
     <form class="col s12 l12">
       <div class="row">
         <div class="input-field col s10 offset-s1 l10 offset-l1">
@@ -73,7 +76,7 @@
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-  <script type="text/javascript" src="js/app.js">
+  <script type="text/javascript" src="../js/app.js">
 
   </script>
 
