--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ background: linear-gradient(to bottom, rgba(17, 255, 189, 0.5), rgba(170, 255, 1
 
 #network-container {
   background-color: white;
-  height: 100vh;
+  padding-bottom: 8vh;
 }
 
 
@@ -203,4 +203,21 @@ header {
   display: block;
   margin: 0;
   width: 100%;
+}
+
+
+/*--NAV--*/
+
+.nav-bottom {
+  background-color: white;
+  border:none;
+  border-bottom: 2px solid #AAFFA9;
+  height: 8vh;
+  position: fixed;
+  top: 92vh;
+}
+
+.nav-bottom i {
+  text-shadow: 2px 2px 4px #C0C0C0;
+  color: #4E3326;
 }
