--- a/views/network.html
+++ b/views/network.html
@@ -46,6 +46,23 @@
     </div>
   </section>
 
+  <!-- Nav-->
+  <nav class="nav-bottom">
+    <div class="row">
+      <div class="col s12 center-align">
+        <div class="col s4">
+          <a href="network.html"><i class="material-icons prefix">home</i></a>
+        </div>
+        <div class="col s4">
+          <a href="follow.html"><i class="material-icons prefix">person_add</i></a>
+        </div>
+        <div class="col s4">
+          <a href="profile.html"><i class="material-icons prefix">person</i></a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
 </div>
 
 <!-- SCRIPTS -->
