--- a/views/profile.html
+++ b/views/profile.html
@@ -38,23 +38,55 @@
     <div class="row">
       <div class="col s5 offset-s1" id="imc">
         <span>IMC :</span>
-        <h5 id="user-imc"> -- </h5>
+        <h6 id="user-imc"> 00 </h6>
       </div>
       <div class="col s5" id="calories">
         <span>Calories :</span>
-        <h5 id="user-calories"> -- </h5>
+        <h6 id="user-calories"> 00 </h6>
       </div>
       <div class="row">
-        <div class="col s5 offset-s1">
-          <button type="button" name="button" class="btn-outline">Calcular IMC</button>
-        </div>
-        <div class="col s5">
-          <button type="button" name="button" class="btn-outline">Calcular calorias</button>
+        <div class="col s10 offset-s1">
+          <!-- IMC collapsible-->
+          <ul class="collapsible" data-collapsible="accordion">
+            <li>
+              <div class="collapsible-header"><i class="material-icons">filter_drama</i>Calcular IMC</div>
+              <div class="collapsible-body">
+                  <form>
+                    <label for="height-user">Ingresa tu altura en centímetros</label>
+                    <input type="number" id="height-user" placeholder="ej. 165">
+                    <label for="weight-user">Ingresa tu peso en kilográmos</label>
+                    <input type="number" id="weight-user" placeholder="ej. 50">
+                    <button type="button" name="button" id="btn-calculate-imc">Calcular</button>
+                  </form>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </section>
 
+
+
+
+
+
+  <!-- Nav-->
+  <nav class="nav-bottom">
+    <div class="row">
+      <div class="col s12 center-align">
+        <div class="col s4">
+          <a href="network.html"><i class="material-icons prefix">home</i></a>
+        </div>
+        <div class="col s4">
+          <a href="follow.html"><i class="material-icons prefix">person_add</i></a>
+        </div>
+        <div class="col s4">
+          <a href="profile.html"><i class="material-icons prefix">person</i></a>
+        </div>
+      </div>
+    </div>
+  </nav>
 
 </div>
 
@@ -62,6 +94,8 @@
 
 
 <!-- SCRIPTS -->
+
+  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
   <!-- Compiled and minified CSS -->
@@ -69,9 +103,6 @@
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
   <script type="text/javascript" src="../js/app.js">
 
