--- a/views/follow.html
+++ b/views/follow.html
@@ -11,6 +11,96 @@
 </head>
 <body>
 
+  <div class="col s12 m8 offset-m2 l6 offset-l3">
+          <div class="card-panel grey lighten-5 z-depth-1">
+            <div class="row valign-wrapper">
+              <div class="col s2">
+                <img src="../assets/img/perfil_1.jpg" alt="" class="circle responsive-img" width="150px" height="150px"> <!-- notice the "circle" class -->
+              </div>
+                <div class="col s10">
+                <h5 class="black-text"> Elena Ortiz </h5>
+                <h6>Cosinera</h6>
+                <a class="waves-effect waves-light btn">Seguir</a>
+                <a class="btn disabled">Eliminar</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m8 offset-m2 l6 offset-l3">
+            <div class="card-panel grey lighten-5 z-depth-1">
+              <div class="row valign-wrapper">
+                <div class="col s2">
+                  <img src="../assets/img/perfil_2.jpg" alt="" class="circle responsive-img" width="150px" height="150px"> <!-- notice the "circle" class -->
+                </div>
+                <div class="col s10">
+                  <h5 class="black-text"> Martín Berasategui  </h5>
+                  <h6>Nutriologo</h6>
+                  <a class="waves-effect waves-light btn">Seguir</a>
+                  <a class="btn disabled">Eliminar</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m8 offset-m2 l6 offset-l3">
+              <div class="card-panel grey lighten-5 z-depth-1">
+                <div class="row valign-wrapper">
+                  <div class="col s2">
+                    <img src="../assets/img/perfil_3.jpg" alt="" class="circle responsive-img" width="150px" height="150px"> <!-- notice the "circle" class -->
+                  </div>
+                  <div class="col s10">
+                    <h5 class="black-text"> Pedro Subijana </h5>
+                    <h6>Estudiante</h6>
+                      <a class="waves-effect waves-light btn">Seguir</a>
+                      <a class="btn disabled">Eliminar</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m8 offset-m2 l6 offset-l3">
+                <div class="card-panel grey lighten-5 z-depth-1">
+                  <div class="row valign-wrapper">
+                    <div class="col s2">
+                      <img src="../assets/img/perfil_4.jpg" alt="" class="circle responsive-img" width="150px" height="150px"> <!-- notice the "circle" class -->
+                    </div>
+                    <div class="col s10">
+                      <h5 class="black-text"> Patricia Quintana</h5>
+                      <h6> Medico</h6>
+                        <a class="waves-effect waves-light btn">Seguir</a>
+                        <a class="btn disabled">Eliminar</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col s12 m8 offset-m2 l6 offset-l3">
+                  <div class="card-panel grey lighten-5 z-depth-1">
+                    <div class="row valign-wrapper">
+                      <div class="col s2">
+                        <img src="../assets/img/perfil_5.jpg" alt="" class="circle responsive-img" width="150px" height="150px"> <!-- notice the "circle" class -->
+                      </div>
+                      <div class="col s10">
+                        <h5 class="black-text">Daniel Santiago</h5>
+                        <h6>Instructor fitness </h6>
+                          <a class="waves-effect waves-light btn">Seguir</a>
+                          <a class="btn disabled">Eliminar</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col s12 m8 offset-m2 l6 offset-l3">
+                    <div class="card-panel grey lighten-5 z-depth-1">
+                      <div class="row valign-wrapper">
+                        <div class="col s2">
+                          <img src="../assets/img/perfil_6.jpg" alt="" class="circle responsive-img" width="150px" height="150px"> <!-- notice the "circle" class -->
+                        </div>
+                        <div class="col s10">
+                          <h5 class="black-text">Alicia Gironella</h5>
+                          <h6>Nutrologa</h6>
+                            <a class="waves-effect waves-light btn">Seguir</a>
+                            <a class="btn disabled">Eliminar</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
 
 
 
