--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,7 @@ header {
   position: fixed;
   top: 92vh;
   box-shadow: 8px 4px 8px 0 rgba(0, 0, 0, 0.4), 10px 6px 20px 0 rgba(0, 0, 0, 0.27);
+  z-index: 1000;
 }
 
 .nav-bottom i {
