--- a/views/follow.html
+++ b/views/follow.html
@@ -5,11 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Healthy food</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 <body>
+  <!-- Header-->
+  <header class="header center-align">
+    <div class="row">
+      <div class="col s12">
+        <img src="../assets/img/logo-horizontal.png" alt="" class="responsive-img logo-header">
+      </div>
+    </div>
+  </header>
 
   <div class="col s12 m8 offset-m2 l6 offset-l3">
           <div class="card-panel grey lighten-5 z-depth-1">
@@ -103,6 +111,24 @@
                   </div>
 
 
+                    <!-- Nav-->
+                    <nav class="nav-bottom">
+                      <div class="row">
+                        <div class="col s12 center-align">
+                          <div class="col s3">
+                            <a href="views/network.html"><i class="material-icons prefix">home</i></a>
+                          </div>
+                          <div class="col s3">
+                            <a href="views/network.html"><i class="material-icons prefix">comment</i></a>
+                          </div>
+                          <div class="col s3">
+                            <a href="views/follow.html"><i class="material-icons prefix">person_add</i></a>
+                          </div>
+                          <div class="col s3">
+                            <a href="views/profile.html"><i class="material-icons prefix">person</i></a>
+                          </div>
+                        </div>
+                      </div>
 
 
 
@@ -118,7 +144,7 @@
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-  <script type="text/javascript" src="js/app.js">
+  <script type="text/javascript" src="../js/app.js">
 
   </script>
 
