--- a/views/follow.html
+++ b/views/follow.html
@@ -19,16 +19,19 @@
     </div>
   </header>
 
+
+  <!-- Contacts-->
+  <div id="container-follow">
   <div class="col s12 m8 offset-m2 l6 offset-l3">
           <div class="card-panel grey lighten-5 z-depth-1">
             <div class="row valign-wrapper">
               <div class="col s2">
-                <img src="../assets/img/perfil_1.jpg" alt="" class="circle responsive-img" width="150px" height="150px"> <!-- notice the "circle" class -->
+                <img src="../assets/img/perfil_1.jpeg" alt="" class="circle responsive-img" width="250px" height="250px"> <!-- notice the "circle" class -->
               </div>
                 <div class="col s10">
                 <h5 class="black-text"> Elena Ortiz </h5>
                 <h6>Cosinera</h6>
-                <a class="waves-effect waves-light btn">Seguir</a>
+                <a id="btn-follow" class="waves-effect waves-light btn">Seguir</a>
                 <a class="btn disabled">Eliminar</a>
               </div>
             </div>
@@ -38,12 +41,12 @@
             <div class="card-panel grey lighten-5 z-depth-1">
               <div class="row valign-wrapper">
                 <div class="col s2">
-                  <img src="../assets/img/perfil_2.jpg" alt="" class="circle responsive-img" width="150px" height="150px"> <!-- notice the "circle" class -->
+                  <img src="../assets/img/perfil_2.jpeg" alt="" class="circle responsive-img" width="250px" height="250px"> <!-- notice the "circle" class -->
                 </div>
                 <div class="col s10">
                   <h5 class="black-text"> Martín Berasategui  </h5>
                   <h6>Nutriologo</h6>
-                  <a class="waves-effect waves-light btn">Seguir</a>
+                  <a id="btn-follow" class="waves-effect waves-light btn">Seguir</a>
                   <a class="btn disabled">Eliminar</a>
                 </div>
               </div>
@@ -53,12 +56,12 @@
               <div class="card-panel grey lighten-5 z-depth-1">
                 <div class="row valign-wrapper">
                   <div class="col s2">
-                    <img src="../assets/img/perfil_3.jpg" alt="" class="circle responsive-img" width="150px" height="150px"> <!-- notice the "circle" class -->
+                    <img src="../assets/img/perfil_3.jpeg" alt="" class="circle responsive-img" width="250px" height="250px"> <!-- notice the "circle" class -->
                   </div>
                   <div class="col s10">
                     <h5 class="black-text"> Pedro Subijana </h5>
                     <h6>Estudiante</h6>
-                      <a class="waves-effect waves-light btn">Seguir</a>
+                      <a id="btn-follow" class="waves-effect waves-light btn">Seguir</a>
                       <a class="btn disabled">Eliminar</a>
                   </div>
                 </div>
@@ -68,12 +71,12 @@
                 <div class="card-panel grey lighten-5 z-depth-1">
                   <div class="row valign-wrapper">
                     <div class="col s2">
-                      <img src="../assets/img/perfil_4.jpg" alt="" class="circle responsive-img" width="150px" height="150px"> <!-- notice the "circle" class -->
+                      <img src="../assets/img/perfil_4.jpeg" alt="" class="circle responsive-img" width="250px" height="250px"> <!-- notice the "circle" class -->
                     </div>
                     <div class="col s10">
                       <h5 class="black-text"> Patricia Quintana</h5>
                       <h6> Medico</h6>
-                        <a class="waves-effect waves-light btn">Seguir</a>
+                        <a id="btn-follow" class="waves-effect waves-light btn">Seguir</a>
                         <a class="btn disabled">Eliminar</a>
                     </div>
                   </div>
@@ -83,12 +86,12 @@
                   <div class="card-panel grey lighten-5 z-depth-1">
                     <div class="row valign-wrapper">
                       <div class="col s2">
-                        <img src="../assets/img/perfil_5.jpg" alt="" class="circle responsive-img" width="150px" height="150px"> <!-- notice the "circle" class -->
+                        <img src="../assets/img/perfil_5.jpeg" alt="" class="circle responsive-img" width="350px" height="350px"> <!-- notice the "circle" class -->
                       </div>
                       <div class="col s10">
                         <h5 class="black-text">Daniel Santiago</h5>
                         <h6>Instructor fitness </h6>
-                          <a class="waves-effect waves-light btn">Seguir</a>
+                          <a id="btn-follow" class="waves-effect waves-light btn">Seguir</a>
                           <a class="btn disabled">Eliminar</a>
                       </div>
                     </div>
@@ -98,12 +101,12 @@
                     <div class="card-panel grey lighten-5 z-depth-1">
                       <div class="row valign-wrapper">
                         <div class="col s2">
-                          <img src="../assets/img/perfil_6.jpg" alt="" class="circle responsive-img" width="150px" height="150px"> <!-- notice the "circle" class -->
+                          <img src="../assets/img/perfil_6.jpeg" alt="" class="circle responsive-img" width="350px" height="350px"> <!-- notice the "circle" class -->
                         </div>
                         <div class="col s10">
                           <h5 class="black-text">Alicia Gironella</h5>
                           <h6>Nutrologa</h6>
-                            <a class="waves-effect waves-light btn">Seguir</a>
+                            <a id="btn-follow" class="waves-effect waves-light btn">Seguir</a>
                             <a class="btn disabled">Eliminar</a>
                         </div>
                       </div>
@@ -116,21 +119,21 @@
                       <div class="row">
                         <div class="col s12 center-align">
                           <div class="col s3">
-                            <a href="views/network.html"><i class="material-icons prefix">home</i></a>
+                            <a href="../index.html"><i class="material-icons prefix">home</i></a>
                           </div>
                           <div class="col s3">
                             <a href="views/network.html"><i class="material-icons prefix">comment</i></a>
                           </div>
                           <div class="col s3">
-                            <a href="views/follow.html"><i class="material-icons prefix">person_add</i></a>
+                            <a href="follow.html"><i class="material-icons prefix">person_add</i></a>
                           </div>
                           <div class="col s3">
-                            <a href="views/profile.html"><i class="material-icons prefix">person</i></a>
+                            <a href="profile.html"><i class="material-icons prefix">person</i></a>
                           </div>
                         </div>
                       </div>
 
-
+  </div>
 
 <!-- SCRIPTS -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -141,8 +144,7 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
 
   <script type="text/javascript" src="../js/app.js">
 
