--- a/views/profile.html
+++ b/views/profile.html
@@ -85,16 +85,16 @@
     <div class="row">
       <div class="col s12 center-align">
         <div class="col s3">
-          <a href="views/network.html"><i class="material-icons prefix">home</i></a>
+          <a href="../index.html"><i class="material-icons prefix">home</i></a>
         </div>
         <div class="col s3">
           <a href="views/network.html"><i class="material-icons prefix">comment</i></a>
         </div>
         <div class="col s3">
-          <a href="views/follow.html"><i class="material-icons prefix">person_add</i></a>
+          <a href="follow.html"><i class="material-icons prefix">person_add</i></a>
         </div>
         <div class="col s3">
-          <a href="views/profile.html"><i class="material-icons prefix">person</i></a>
+          <a href="profile.html"><i class="material-icons prefix">person</i></a>
         </div>
       </div>
     </div>
