--- a/views/signup.html
+++ b/views/signup.html
@@ -12,33 +12,35 @@
 <body>
 
 <!-- Registro -->
-<main id="main-login" class="login valign-wrapper">
+<main id="main-signup" class="signup valign-wrapper">
   <div class="row" >
       <div class="col s12 center-align">
-        <img src="../assets/img/logo-corazon.png" alt="" class="responsive-img logo-signup">
+        <img src="../assets/img/logo-corazon.png" alt="" class="responsive-img logo-login">
       </div>
     <form class="col s12 l12">
       <div class="row">
+        <!--
         <div class="input-field col s10 offset-s1 l10 offset-l1">
           <i class="material-icons prefix">face</i>
-          <input id="login-name" type="text" class="validate">
-          <label for="login-name" data-error="Ingresa tu nombre" data-success="Correcto">Nombre</label>
+          <input id="signup-name" type="text" class="validate">
+          <label for="signup-name" data-error="Ingresa tu nombre" data-success="Correcto">Nombre</label>
         </div>
         <div class="input-field col s10 offset-s1 l10 offset-l1">
           <i class="material-icons prefix">loyalty</i>
-          <input id="login-nickname" type="text" class="validate">
-          <label for="login-nickname" data-error="Ingresa tu nickname" data-success="Correcto">Nickname</label>
-        </div>
+          <input id="signup-nickname" type="text" class="validate">
+          <label for="signup-nickname" data-error="Ingresa tu nickname" data-success="Correcto">Nickname</label>
+        </div>-->
         <div class="input-field col s10 offset-s1 l10 offset-l1">
           <i class="material-icons prefix">mail_outline</i>
-          <input id="login-email" type="email" class="validate">
-          <label for="login-email" data-error="Ingresa un correo válido" data-success="Correcto">Correo electrónico</label>
+          <input id="signup-email" type="email" class="validate">
+          <label for="signup-email" data-error="Ingresa un correo válido" data-success="Correcto">Correo electrónico</label>
         </div>
         <div class="input-field col s10 offset-s1 l10 offset-l1">
           <i class="material-icons prefix">lock_outline</i>
-          <input id="login-password" type="password" class="validate">
-          <label for="login-password" data-error="Ingresa de 4 a 8 caracteres" data-success="Correcto">Contraseña</label>
+          <input id="signup-password" type="password" class="validate">
+          <label for="signup-password" data-error="Ingresa de 4 a 8 caracteres" data-success="Correcto">Contraseña</label>
         </div>
+        <!--
         <div class="row">
           <div class="col s8 offset-s2">
             <div class="file-field input-field">
@@ -51,9 +53,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
         <div class="col s8 offset-s2 mt-2">
-          <button type="submit" name="button" id="btn-login-network">Registrarme</button>
+          <button type="button" name="button" id="btn-signup-network">Registrarme</button>
         </div>
       </div>
     </form>
