--- a/views/signup.html
+++ b/views/signup.html
@@ -30,6 +30,8 @@
           <input id="signup-nickname" type="text" class="validate">
           <label for="signup-nickname" data-error="Ingresa tu nickname" data-success="Correcto">Nickname</label>
         </div>-->
+
+        <!--
         <div class="input-field col s10 offset-s1 l10 offset-l1">
           <i class="material-icons prefix">mail_outline</i>
           <input id="signup-email" type="email" class="validate">
@@ -40,6 +42,9 @@
           <input id="signup-password" type="password" class="validate">
           <label for="signup-password" data-error="Ingresa de 4 a 8 caracteres" data-success="Correcto">Contraseña</label>
         </div>
+        <div class="col s8 offset-s2 mt-2">
+          <button type="button" name="button" id="btn-signup-network">Registrarme</button>
+        </div>-->
         <!--
         <div class="row">
           <div class="col s8 offset-s2">
@@ -54,9 +59,7 @@
             </div>
           </div>
         </div>-->
-        <div class="col s8 offset-s2 mt-2">
-          <button type="button" name="button" id="btn-signup-network">Registrarme</button>
-        </div>
+
       </div>
     </form>
   </div>
