agregando estilos a principal view

--- a/views/signup.html
+++ b/views/signup.html
@@ -19,6 +19,20 @@
       </div>
     <form class="col s12 l12">
       <div class="row">
+
+        <div class="input-field col s10 offset-s1 l10 offset-l1">
+          <i class="material-icons prefix">mail_outline</i>
+          <input id="signup-email" type="email" class="validate">
+          <label for="signup-email" data-error="Ingresa un correo válido" data-success="Correcto">Correo electrónico</label>
+        </div>
+        <div class="input-field col s10 offset-s1 l10 offset-l1">
+          <i class="material-icons prefix">lock_outline</i>
+          <input id="signup-password" type="password" class="validate">
+          <label for="signup-password" data-error="Ingresa de 4 a 8 caracteres" data-success="Correcto">Contraseña</label>
+        </div>
+        <div class="col s8 offset-s2 mt-2">
+          <button type="button" name="button" id="btn-signup-network">Registrarme</button>
+        </div>
         <!--
         <div class="input-field col s10 offset-s1 l10 offset-l1">
           <i class="material-icons prefix">face</i>
