--- a/views/signup.html
+++ b/views/signup.html
@@ -11,79 +11,51 @@
 </head>
 <body>
 
-<!-- Registro -->
-<main id="main-signup" class="signup valign-wrapper">
-  <div class="row" >
-      <div class="col s12 center-align">
-        <img src="../assets/img/logo-corazon.png" alt="" class="responsive-img logo-login">
-      </div>
-    <form class="col s12 l12">
+  <!-- Registro -->
+  <main class=" main signup valign-wrapper">
+    <div class="container-main">
       <div class="row">
-
-        <div class="input-field col s10 offset-s1 l10 offset-l1">
-          <i class="material-icons prefix">mail_outline</i>
-          <input id="signup-email" type="email" class="validate">
-          <label for="signup-email" data-error="Ingresa un correo válido" data-success="Correcto">Correo electrónico</label>
-        </div>
-        <div class="input-field col s10 offset-s1 l10 offset-l1">
-          <i class="material-icons prefix">lock_outline</i>
-          <input id="signup-password" type="password" class="validate">
-          <label for="signup-password" data-error="Ingresa de 4 a 8 caracteres" data-success="Correcto">Contraseña</label>
-        </div>
-        <div class="col s8 offset-s2 mt-2">
-          <button type="button" name="button" id="btn-signup-network">Registrarme</button>
-        </div>
-        <!--
-        <div class="input-field col s10 offset-s1 l10 offset-l1">
-          <i class="material-icons prefix">face</i>
-          <input id="signup-name" type="text" class="validate">
-          <label for="signup-name" data-error="Ingresa tu nombre" data-success="Correcto">Nombre</label>
-        </div>
-        <div class="input-field col s10 offset-s1 l10 offset-l1">
-          <i class="material-icons prefix">loyalty</i>
-          <input id="signup-nickname" type="text" class="validate">
-          <label for="signup-nickname" data-error="Ingresa tu nickname" data-success="Correcto">Nickname</label>
-        </div>-->
-
-        <!--
-        <div class="input-field col s10 offset-s1 l10 offset-l1">
-          <i class="material-icons prefix">mail_outline</i>
-          <input id="signup-email" type="email" class="validate">
-          <label for="signup-email" data-error="Ingresa un correo válido" data-success="Correcto">Correo electrónico</label>
-        </div>
-        <div class="input-field col s10 offset-s1 l10 offset-l1">
-          <i class="material-icons prefix">lock_outline</i>
-          <input id="signup-password" type="password" class="validate">
-          <label for="signup-password" data-error="Ingresa de 4 a 8 caracteres" data-success="Correcto">Contraseña</label>
-        </div>
-        <div class="col s8 offset-s2 mt-2">
-          <button type="button" name="button" id="btn-signup-network">Registrarme</button>
-        </div>-->
-        <!--
-        <div class="row">
-          <div class="col s8 offset-s2">
-            <div class="file-field input-field">
-              <div class="btn">
-                <span>File</span>
-                <input type="file">
-              </div>
-              <div class="file-path-wrapper">
-                <input class="file-path validate" type="text" placeholder="Sube tu foto de perfil">
-              </div>
+          <div class="col s12 center-align">
+            <img src="../assets/img/logo-corazon.png" alt="" class="responsive-img logo-signup">
+          </div>
+        <form class="col s12 l12">
+          <div class="row">
+            <!--<div class="input-field col s10 offset-s1 l10 offset-l1">
+              <i class="material-icons prefix">face</i>
+              <input id="signup-name" type="text" class="validate">
+              <label for="signup-name" data-error="Ingresa tu nombre" data-success="Correcto">Nombre</label>
+            </div>-->
+            <div class="input-field col s10 offset-s1 l10 offset-l1">
+              <i class="material-icons prefix">mail_outline</i>
+              <input id="signup-email" type="email" class="validate">
+              <label for="signup-email" data-error="Ingresa un correo válido" data-success="Correcto">Correo electrónico</label>
+            </div>
+            <div class="input-field col s10 offset-s1 l10 offset-l1">
+              <i class="material-icons prefix">lock_outline</i>
+              <input id="signup-password" type="password" class="validate">
+              <label for="signup-password" data-error="Ingresa de 4 a 8 caracteres" data-success="Correcto">Contraseña</label>
+            </div>
+            <div class="col s8 offset-s2 mt-7">
+              <button type="button" name="button" id="btn-signup-network" class="btn-outline">Registrarme</button>
             </div>
           </div>
-        </div>-->
-
+        </form>
       </div>
-    </form>
-  </div>
-</main>
-
-
+    </div>
+  </main>
 
 
 
 <!-- SCRIPTS -->
+
+  <!-- firabase -->
+  <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-database.js"></script>
+
+
+  <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
   <!-- Compiled and minified CSS -->
@@ -92,12 +64,8 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-  <script type="text/javascript" src="../js/app.js">
-
-  </script>
+  <script type="text/javascript" src="../js/app.js"></script>
 
 
 </body>
