agregando registros de nuevos usuarios

--- a/views/profile.html
+++ b/views/profile.html
@@ -75,9 +75,13 @@
     </div>
   </section>
 
-
-
-
+  <section id="logout">
+    <div class="row">
+      <div class="col s6 offset-s3">
+        <button type="button" name="button" id="close-session" class="btn-outline">Cerrar sesión</button>
+      </div>
+    </div>
+  </section>
 
 
   <!-- Nav-->
@@ -85,10 +89,10 @@
     <div class="row">
       <div class="col s12 center-align">
         <div class="col s3">
-          <a href="../index.html"><i class="material-icons prefix">home</i></a>
+          <a href="principal.html"><i class="material-icons prefix">home</i></a>
         </div>
         <div class="col s3">
-          <a href="views/network.html"><i class="material-icons prefix">comment</i></a>
+          <a href="chat.html"><i class="material-icons prefix">comment</i></a>
         </div>
         <div class="col s3">
           <a href="follow.html"><i class="material-icons prefix">person_add</i></a>
@@ -99,6 +103,9 @@
       </div>
     </div>
   </nav>
+
+
+
 
 </div>
 
