--- a/views/chat.html
+++ b/views/chat.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Healthy food</title>
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/bot.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Ubuntu:400,500,700" rel="stylesheet">
 </head>
@@ -24,79 +25,14 @@
     </header>
 
 
-    <!-- Saludo-->
-    <div id="greeting" class="">
-      <div class="row">
-        <div class="col s12">
-          <img src="https://dummyimage.com/50x50/52941f/fff" alt="" class="circle profile-photo">
-          <span id="greeting-msg">Rebeca</span>
-        </div>
-      </div>
-    </div>
+    <div id="output"></div>
 
+           <div id="container">
+               <input type="text" id="input" value="">
+           </div>
 
-    <!-- Escribir post -->
-    <section >
-      <div class="card-panel hoverable valign-wrapper" id="write-post-section">
-        <div class=" row">
-          <div class="col s1">
-            <div class="profile-photo">
-            </div>
-          </div>
-          <div class="input-field col s10">
-            <textarea id="post-text" class="materialize-textarea" placeholder="¿En qué estás pensando?"></textarea>
-          </div>
-          <div class="row">
-            <div class="col s5 offset-s1">
-              <input type="file" id="files">
-            </div>
-            <div class="col s5">
-              <button type="button" name="button" id="btn-send-post">Publicar</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-
-
-
-    <!-- Newsfeed-->
-    <section id="newsfeed" class="center-align">
-      <div class="row">
-        <div class="col s12 l5 offset-l1" id="show-post-section">
-          <div class="card-panel card-panel-post">
-            <img src="../assets/img/yogurt.png" alt="" class="responsive-img">
-            <hr>
-            <div class="icons-post">
-              <i class="material-icons icon">thumb_down</i>
-              <i class="material-icons icon">thumb_up</i>
-              <i class="material-icons icon">favorite</i>
-            </div>
-          </div>
-          <div class="card-panel card-panel-post">
-            <img src="../assets/img/fit.jpg" alt="" class="responsive-img">
-            <hr>
-            <div class="icons-post">
-              <i class="material-icons icon">thumb_down</i>
-              <i class="material-icons icon">thumb_up</i>
-              <i class="material-icons icon">favorite</i>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-
-
-
-
-
-
-    <!-- Nav-->
-    <nav class="nav-bottom hide-on-large-only">
+           <!-- Nav-->
+    <nav class="nav-bottom">
       <div class="row">
         <div class="col s12 center-align">
           <div class="col s3">
@@ -113,8 +49,7 @@
           </div>
         </div>
       </div>
-    </nav>
-
+     </nav>
 
   </div>
 
@@ -139,6 +74,7 @@
 
 
   <script type="text/javascript" src="../js/app.js"></script>
+  <script type="text/javascript" src="../js/bot.js"></script>
 
 
 </body>
