--- a/views/follow.html
+++ b/views/follow.html
@@ -114,41 +114,50 @@
                   </div>
 
 
-                    <!-- Nav-->
-                    <nav class="nav-bottom">
-                      <div class="row">
-                        <div class="col s12 center-align">
-                          <div class="col s3">
-                            <a href="../index.html"><i class="material-icons prefix">home</i></a>
-                          </div>
-                          <div class="col s3">
-                            <a href="views/network.html"><i class="material-icons prefix">comment</i></a>
-                          </div>
-                          <div class="col s3">
-                            <a href="follow.html"><i class="material-icons prefix">person_add</i></a>
-                          </div>
-                          <div class="col s3">
-                            <a href="profile.html"><i class="material-icons prefix">person</i></a>
-                          </div>
-                        </div>
-                      </div>
+    <!-- Nav-->
+    <nav class="nav-bottom">
+      <div class="row">
+        <div class="col s12 center-align">
+          <div class="col s3">
+            <a href="principal.html"><i class="material-icons prefix">home</i></a>
+          </div>
+          <div class="col s3">
+            <a href="chat.html"><i class="material-icons prefix">comment</i></a>
+          </div>
+          <div class="col s3">
+            <a href="follow.html"><i class="material-icons prefix">person_add</i></a>
+          </div>
+          <div class="col s3">
+            <a href="profile.html"><i class="material-icons prefix">person</i></a>
+          </div>
+        </div>
+      </div>
+    </nav>
 
   </div>
 
-<!-- SCRIPTS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <!-- SCRIPTS -->
 
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <!-- firabase -->
+    <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase-database.js"></script>
 
 
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-  <script type="text/javascript" src="../js/app.js">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
-  </script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+
+    <script type="text/javascript" src="../js/app.js"></script>
+
 
 
 </body>
