agregando estilos al chatbot

--- a/views/chat.html
+++ b/views/chat.html
@@ -25,13 +25,24 @@
     </header>
 
 
-    <div id="output"></div>
+    <!-- Chatbot container-->
+    <section>
+      <div class="row">
+        <div class="col s8 offset-s2">
+          <div id="output"></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s8 offset-s2">
+          <div id="container">
+            <input type="text" id="input" value="">
+          </div>
+        </div>
+      </div>
+    </section>
 
-           <div id="container">
-               <input type="text" id="input" value="">
-           </div>
 
-           <!-- Nav-->
+    <!-- Nav-->
     <nav class="nav-bottom">
       <div class="row">
         <div class="col s12 center-align">
