--- a/css/bot.css
+++ b/css/bot.css
@@ -1,26 +1,31 @@
 
-h1, p {
+h3, p {
     font-family: sans-serif;
     text-align: center;
     color: #323330;
-    font-size:  100px;
+    font-size:  5vh;
+    color: #30AC18;
+    font-family: 'Ubuntu', sans-serif;
 }
+
 p {
-    font-size: 30px;
+    font-size: 3vh;
 }
+
 #output, #container {
     display: flex;
     justify-content: center;
-    margin-top: 100px;
+    margin-top: 20vh;
 }
-input {
-    background-color: #eee;
+
+#input {
     border: none;
+    border-bottom: 3px solid #30AC18;
     font-family: sans-serif;
     color: #000;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 30px;
+    font-size:  3vh;
 }
